k3s-loadbalancer/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.k3s-david.sda-dev-projects.nl
      http:
        paths:
          - backend:
              serviceName: kubernetes-dashboard
              servicePort: 443
            path: /
  tls:
  - hosts:
    - dashboard.k3s-david.sda-dev-projects.nl
    secretName: letsencrypt-prod-dashboard
